--- a/tes.html
+++ b/tes.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
  
     <title>test</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
+
+<body style=>
     <hr size="9" noshade="9">
     <H1>hello </H1>
     <p><strong> if you raedy  for a  click raedy</strong></p>
