--- a/tes2.html
+++ b/tes2.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
    
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+<hr>
 <body>
-    <H1>I love you roro forever</H1>
+    <H1>hi  </H1>
  
 </body>
 </html>
